# yt_music_scrobbler

./: .gitignore  README.md  pyproject.toml  tasks.py
tf/: _input.tf  _local.tf  _output.tf  appregistry.tf  eventbridge.tf  iam.tf  lambda.tf  lambda_layer.tf  main.tf  ssm.tf  terraform.tfvars.example
tf/lambda/: build_layer.sh  handler.py
